# Coursework

./: CMakeLists.txt  Loader.cpp  Loader.h  Login.cpp  Login.h  Main.cpp  README.md  SwitchModule.cpp  SwitchModule.h  Utils.cpp  ccc.cpp  loader.cpp  loader.h  login.cpp  login.h  main.cpp
include/: Login.h  Utils.h
include/modules/: AthletesActions.h  Calculations.h  Searching.h  Sorting.h  UsersActions.h
src/: Loader.cpp  Loader.h  Login.cpp  Main.cpp  SwitchModule.cpp  SwitchModule.h  Utils.cpp  Utils.h
src/modules/: Athletes.cpp  Athletes.h  AthletesActions.cpp  Calculations.cpp  Searching.cpp  Sorting.cpp  Sorting.h  SwitchModule.cpp  SwitchModule.h  Users.cpp  Users.h  UsersActions.cpp
src/structs/: athlete.h
structs/: user.h
